ci: run all workflows on Ubuntu 22.04
Let's try to be consistent there.

Signed-off-by: Robin Hahling <robin.hahling@gw-computing.net>

--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -24,7 +24,7 @@ env:
 
 jobs:
   integration-test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     timeout-minutes: 20
     steps:
       - name: Checkout the repository
