.github: Replace deprecated command with environment file
Signed-off-by: jongwooo <jongwooo.han@gmail.com>

Signed-off-by: Jongwoo Han <jongwooo.han@gmail.com>

--- a/.github/workflows/build-images-release.yaml
+++ b/.github/workflows/build-images-release.yaml
@@ -83,7 +83,7 @@ jobs:
       - name: Getting image tag
         id: tag
         run: |
-          echo ::set-output name=tag::${GITHUB_REF##*/}
+          echo "tag=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
       - name: Downloading Image Digests
         shell: bash
         run: |
