--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -136,7 +136,12 @@
         "go",
         "golang"
       ],
-      "allowedVersions": "<=1.20",
+      "matchUpdateTypes": [
+        "patch",
+        "digest",
+        "pin",
+        "pinDigest"
+      ],
       "matchBaseBranches": [
         "v0.12"
       ],
@@ -154,7 +159,12 @@
       "matchPackageNames": [
         "docker.io/library/alpine"
       ],
-      "allowedVersions": "<=3.18",
+      "matchUpdateTypes": [
+        "patch",
+        "digest",
+        "pin",
+        "pinDigest"
+      ],
       "matchBaseBranches": [
         "v0.12"
       ]
