renovate: Use allowedVersions to limit updates to stable branches
Signed-off-by: Chance Zibolski <chance.zibolski@gmail.com>

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -140,12 +140,7 @@
         "go",
         "golang"
       ],
-      "matchUpdateTypes": [
-        "patch",
-        "digest",
-        "pin",
-        "pinDigest"
-      ],
+      "allowedVersions": "<=1.20",
       "matchBaseBranches": [
         "v0.12"
       ],
@@ -163,12 +158,7 @@
       "matchPackageNames": [
         "docker.io/library/alpine"
       ],
-      "matchUpdateTypes": [
-        "patch",
-        "digest",
-        "pin",
-        "pinDigest"
-      ],
+      "allowedVersions": "<=3.18",
       "matchBaseBranches": [
         "v0.12"
       ]
