--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -35,8 +35,7 @@ jobs:
       - name: Setup go
         uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491 # v5.0.0
         with:
-          # renovate: datasource=golang-version depName=go
-          go-version: '1.22.1'
+          go-version-file: 'go.mod'
       - name: Build hubble CLI
         run: make
       - name: Set up Helm
