--- a/.github/workflows/build-images-release.yaml
+++ b/.github/workflows/build-images-release.yaml
@@ -117,6 +117,7 @@ jobs:
       - name: Download digests of all images built
         uses: actions/download-artifact@65a9edc5881444af0b9093a5e628f2fe47ea3b2e # v4.1.7
         with:
+          pattern: "*image-digest *"
           path: image-digest/
 
       - name: Image Digests Output
