migrate Renovate config take #2
Commit 5ef17d1368802fef26765e111136f8bd06474da3 missed a conversion from
`matchFiles` to `matchFileNames`.

Signed-off-by: Robin Hahling <robin.hahling@gw-computing.net>
Suggested-by: Signed-off-by: Alexandre Perrin <alex@isovalent.com>

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -83,7 +83,7 @@
     {
       "groupName": "all go dependencies main",
       "groupSlug": "all-go-deps-main",
-      "matchFiles": [
+      "matchFileNames": [
         "go.mod",
         "go.sum",
       ],
